@@ -61,7 +61,8 @@ struct umwsu_module *module_new(const char *path)
   mod->name = module_name_from_path(path);
   mod->data = NULL;
 
-  mod->conf = get_symbol(module, mod->name, "conf");
+  mod->conf_set = get_symbol(module, mod->name, "conf_set");
+  mod->conf_get = get_symbol(module, mod->name, "conf_get");
   mod->init = get_symbol(module, mod->name, "init");
   mod->scan = get_symbol(module, mod->name, "scan");
   mod->close = get_symbol(module, mod->name, "close");
