@@ -7,7 +7,8 @@
 
 struct umwsu_module {
   enum umwsu_mod_status (*init)(void **pmod_data);
-  enum umwsu_mod_status (*conf)(void *mod_data, const char *key, const char *value);
+  enum umwsu_mod_status (*conf_set)(void *mod_data, const char *key, const char *value);
+  char *(*conf_get)(void *mod_data, const char *key);
   enum umwsu_status (*scan)(const char *path, const char *mime_type, void *mod_data, char **pmod_report);
   enum umwsu_mod_status (*close)(void *mod_data);
   const char *name;
